src/tui/views/snapshots/whk__tui__views__snapshot_tests__relay_inspector_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                              ⇄ relay stripe-prod → :3000 ● "
"┌──────────────┐┌ Relay · stripe-prod → http://localhost:3000 ────────────────────────────────────────── 2 fwd · 1 err ┐"
"│  Sources     ││● connected                                                                                           │"
"│  Destinations││  12:04:11  POST    evt_8f2a…   → 200     34ms      35 B                                              │"
"│  Connections ││▸ 12:04:09  POST    evt_77c1…   → 500    120ms      35 B                                              │"
"│  Events      ││  12:03:58  POST    evt_1b9e…   ✕ connection refused                                                  │"
"│  DLQ         ││                                                                                                      │"
"│  Stats       ││                                                                                                      │"
"│▸ Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││┌ Request ────────────────────────────────────────┐┌ Response ───────────────────────────────────────┐│"
"│              │││POST http://localhost:3000                       ││500 Internal Server Error  120ms                 ││"
"│              │││content-type: application/json                   ││content-type: application/json                   ││"
"│              │││stripe-signature: t=1,v1=abc                     ││                                                 ││"
"│              │││x-webhooker-event-id: evt_77c1d05e9a             ││{                                                ││"
"│              │││                                                 ││  "error": "db timeout"                          ││"
"│              │││{                                                ││}                                                ││"
"│              │││  "id": "in_1",                                  ││                                                 ││"
"│              │││  "type": "invoice.paid"                         ││                                                 ││"
"│              │││}                                                ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              │││                                                 ││                                                 ││"
"│              ││└─────────────────────────────────────────────────┘└─────────────────────────────────────────────────┘│"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" p replay locally · u change URL · x stop · enter expand · / search                                                     "
