src/tui/views/snapshots/whk__tui__views__snapshot_tests__relay_inspector_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu      ⇄ relay stripe-prod → :3000 ● "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Relay · stripe-prod → http://localhost:3000 ────────────────── 2 fwd · 1 err ┐"
"│● connected                                                                   │"
"│  12:04:11  POST    evt_8f2a…   → 200     34ms      35 B                      │"
"│▸ 12:04:09  POST    evt_77c1…   → 500    120ms      35 B                      │"
"│  12:03:58  POST    evt_1b9e…   ✕ connection refused                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│┌ Request ────────────────────────────┐┌ Response ───────────────────────────┐│"
"││POST http://localhost:3000           ││500 Internal Server Error  120ms     ││"
"││content-type: application/json       ││content-type: application/json       ││"
"││stripe-signature: t=1,v1=abc         ││                                     ││"
"││x-webhooker-event-id: evt_77c1d05e9a ││{                                    ││"
"││                                     ││  "error": "db timeout"              ││"
"││{                                    ││}                                    ││"
"│└─────────────────────────────────────┘└─────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" p replay locally · u change URL · x stop · enter expand · / search             "
