src/tui/views/snapshots/whk__tui__views__snapshot_tests__settings_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Settings ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││▸ Open on bare `whk`    ‹ on ›                                                                        │"
"│  Destinations││  Theme                 ‹ auto ›                                                                      │"
"│  Connections ││  Accent color          #7c5cff                                                                       │"
"│  Events      ││  ASCII only            ‹ off ›                                                                       │"
"│  DLQ         ││  Start screen          ‹ sources ›                                                                   │"
"│  Stats       ││  Time format           ‹ utc ›                                                                       │"
"│  Relay       ││  Request budget (%)    50                                                                            │"
"│▸ Settings    ││  Relay default URL     http://localhost:3000                                                         │"
"│              ││  Clipboard             ‹ osc52 ›                                                                     │"
"│              ││  Compact header        ‹ off ›                                                                       │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" tab next field · h/l change · ctrl+s save · esc back                                                                   "
