src/tui/views/snapshots/whk__tui__views__snapshot_tests__settings_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Settings ────────────────────────────────────────────────────────────────────┐"
"│▸ Open on bare `whk`    ‹ on ›                                                │"
"│  Theme                 ‹ auto ›                                              │"
"│  Accent color          #7c5cff                                               │"
"│  ASCII only            ‹ off ›                                               │"
"│  Start screen          ‹ sources ›                                           │"
"│  Time format           ‹ utc ›                                               │"
"│  Request budget (%)    50                                                    │"
"│  Relay default URL     http://localhost:3000                                 │"
"│  Clipboard             ‹ osc52 ›                                             │"
"│  Compact header        ‹ off ›                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" tab next field · h/l change · ctrl+s save · esc back                           "
