src/tui/views/snapshots/whk__tui__views__snapshot_tests__source_overview_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ stripe-prod ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│▸ Sources     ││1 Overview   2 Live   3 Events   4 Connections   5 DLQ                                                │"
"│  Destinations││                                                                                                      │"
"│  Connections ││Ingest URL    https://app.webhooker.eu/in/6b225n04u5kmyg                                              │"
"│  Events      ││Status        ● active                                                                                │"
"│  DLQ         ││Description   Payments from Stripe                                                                    │"
"│  Stats       ││Color         ██ #3b82f6                                                                              │"
"│  Relay       ││Verification  stripe (secret ***)                                                                     │"
"│  Settings    ││Response      default                                                                                 │"
"│              ││Created       2026-09-01 10:00:00                                                                     │"
"│              ││ID            0198c9f0-0000-7000-8000-00000000000a                                                    │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" e edit · y copy · P pause · T rotate · D delete · 1-5 tabs · esc back · r refresh · ? help                      3s ago "
