src/tui/views/snapshots/whk__tui__views__snapshot_tests__sources_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Sources ─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│▸ Sources     ││▸ ●  stripe-prod                                       1 204 events  2 conns   verify: stripe         │"
"│  Destinations││  ●  github-ci                                           318 events  1 conn    verify: github         │"
"│  Connections ││  ◐  shopify-old                                          12 events  0 conns   paused                 │"
"│  Events      ││                                                                                                      │"
"│  DLQ         ││                                                                                                      │"
"│  Stats       ││                                                                                                      │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · n new · e edit · D delete · / filter · L relay · r refresh · ? help · q quit                       3s ago "
