src/tui/views/snapshots/whk__tui__views__snapshot_tests__sources_ascii_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&ascii_app, 80, 24).backend()"
---
"  |  | |_| |/   Webhooker CLI v[version] "
"  |/\| | | |\   acme | pro | app.webhooker.eu                                   "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"+ Sources ---------------------------------------------------------------------+"
"|> *  stripe-prod                       1 204 events  2 conns   verify: stripe |"
"|  *  github-ci                           318 events  1 conn    verify: github |"
"|  -  shopify-old                          12 events  0 conns   paused         |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"+------------------------------------------------------------------------------+"
" enter open | n new | e edit | D delete | / filter | L relay | r refresh 3s ago "
